--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[![Tests for sprint 13](https://github.com/alexunnt/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/alexunnt/express-mesto-gha/actions/workflows/tests-13-sprint.yml)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/alexunnt/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/alexunnt/express-mesto-gha#readme"
+  "homepage": "https://github.com/alexunnt/express-mesto-gha#readme",
+  "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
